--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@mantine/core": "^7.17.4",
+    "@mantine/form": "^7.17.5",
     "@mantine/hooks": "^7.17.4",
     "@tabler/icons-react": "^3.31.0",
+    "axios": "^1.9.0",
     "next": "^15.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
