--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "^7.17.4",
     "@mantine/form": "^7.17.5",
     "@mantine/hooks": "^7.17.4",
+    "@mantine/notifications": "^8.0.0",
     "@tabler/icons-react": "^3.31.0",
     "axios": "^1.9.0",
     "next": "^15.3.0",
